# ollamaMQ

./: .gitignore  AGENTS.md  Cargo.toml  README.md  demo.tape  docker-compose.yml  docker-entrypoint.sh  test_dispatcher.sh
.github/workflows/: ci.yml  release.sh
examples/: all-llama-proxy.service  all-llama-proxy.socket  models.yaml  users-test.yaml
src/: appstate.rs  auth.rs  dashboard_server.rs  dispatcher.rs  health.rs  lib.rs  main.rs  protocol.rs  tui.rs  utils.rs
