[package]
name = "all-llama-proxy"
version = "0.3.0"
edition = "2024"
description = "High-performance Ollama proxy with per-user fair-share queuing, round-robin scheduling, and a real-time TUI dashboard."
license = "MIT"
authors = ["Sven Seeberg <mail@sven-seeberg.de>","Chleba <chlebik@gmail.com>"]
repository = "https://github.com/netzbegruenung/all-llama-proxy"
homepage = "https://github.com/netzbegruenung/all-llama-proxy"

[dependencies]
axum = "0.8.8"
bytes = "1.11.1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "rustls"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.28"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures-util = "0.3.32"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
humantime = "2.1"
chrono = "0.4"
